--- a/src/style/cards.css
+++ b/src/style/cards.css
@@ -1,13 +1,32 @@
 .gridContainer{
+    /* width: 1200px; */
+    /* height: auto; */
+    /* margin: 0 auto; */
     display: grid;
-  grid-template-columns: auto auto auto auto;
-  justify-content: space-evenly;
+    grid-template-columns: repeat(auto-fit,240px);
+    grid-gap: 40px;
+    
+}
+
+.cards{
+    overflow: hidden;
+  box-shadow: 0px 2px 8px 0px;
+  background-color: white;
+  text-align: center;
+  border-radius: 7px;
+  position: relative;
+  margin: 0.5rem;
 }
 
 .rating{
     border: 1px solid black;
+    background-color: white;
     border-radius: 20px;
     width: fit-content;
+    position: absolute;
+    padding: 5px;
+    margin-top: 14px;
+    margin-left: 14px;
 }
 
 .name{
