--- a/src/style/Details.css
+++ b/src/style/Details.css
@@ -1,8 +1,44 @@
 .details{
-    /* width:583px;
-    height: 470px; */
+    width:40vw;
+    height: 470px;
+    z-index: 1000;
+    border: 2px solid black;
+    position: absolute;
+    top: 25%;
+    left: 30vw;
+    background-color: white;
 }
 
 .detailsTextBox{
+    display: flex; 
+    height: 80%;
+    justify-content: space-evenly;
+
+}
+
+.detailshead{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 10%;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+.title{
+    margin-left: 1em;
+}
+.close{
+    margin-right: 1em;
+    cursor: pointer;
+}
+
+.descript{
+    width: 35%;
+}
+
+/* oitai original width pic tar*/
+
+.descrip{
+     width: 55%;
 }
