--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
   margin-right: 40px;
   font-family: 'Inter', sans-serif;
 }
+/* .App{
+  filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+} */
