--- a/src/style/Details.css
+++ b/src/style/Details.css
@@ -1,4 +1,9 @@
-
+/* .detailscon{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+} */
 .details{
     width:40vw;
     height: 470px;
@@ -8,11 +13,6 @@
     top: 10em;
     left: 30vw;
     background-color: white;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
 }
 
 .detailsTextBox{
@@ -48,3 +48,5 @@
 .descrip{
      width: 55%;
 }
+
+
